// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookActions creates GET_BOOK when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_BOOKS",
  },
  Object {
    "type": "GET_CATEGORIES",
  },
  Object {
    "type": "GET_BOOK",
  },
]
`;

exports[`bookActions creates GET_BOOKS when a search query is made 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_BOOKS",
  },
  Object {
    "type": "GET_CATEGORIES",
  },
  Object {
    "type": "GET_BOOK",
  },
  Object {
    "type": "GET_BOOKS",
  },
]
`;

exports[`bookActions creates GET_BOOKS when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_BOOKS",
  },
]
`;

exports[`bookActions creates GET_CATEGORIES when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_BOOKS",
  },
  Object {
    "type": "GET_CATEGORIES",
  },
]
`;

exports[`bookActions creates GET_ERRORS when a book cannot be created 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
]
`;

exports[`bookActions creates GET_ERRORS when an ad cannot be created 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
]
`;

exports[`bookActions creates GET_REVIEWS when it is called successfully 1`] = `
Array [
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_ERRORS",
  },
  Object {
    "type": "GET_BOOKS",
  },
  Object {
    "type": "GET_CATEGORIES",
  },
  Object {
    "type": "GET_BOOK",
  },
  Object {
    "type": "GET_BOOKS",
  },
  Object {
    "type": "GET_REVIEWS",
  },
]
`;
